# wcm

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  readme.md  wcm.c  wcm.h
cmake/Modules/: FindLibGLFW.cmake
demo/: CMakeLists.txt
demo/src/: main.c  primitives.c  primitives.h
demo/work/wcm_demo.xcodeproj/: project.pbxproj
demo/work/wcm_demo.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
etc/notes/: wacom_xinput.cpp  wacom_xinput.h
src/: wcm.c  wcm.h  wcm_tablet_cocoa.h  wcm_tablet_cocoa.m  wcm_tablet_ez.c  wcm_tablet_ez.h  wcm_tablet_ez_linux.c  wcm_tablet_ez_linux.h  wcm_tablet_ez_windows.c  wcm_tablet_ez_windows.h  wcm_tablet_pencil.h  wcm_tablet_pencil.m  wcm_tablet_x11.c  wcm_tablet_x11.h
src/platform/common/: wcm_ez.c  wcm_ez.h
src/platform/macos/: WacomTabletDriver.m  r_input_tablet_cocoa.m
work/wcm.xcodeproj/: project.pbxproj
work/wcm.xcodeproj/project.xcworkspace/xcuserdata/vs.xcuserdatad/: UserInterfaceState.xcuserstate
work/wcm.xcodeproj/xcuserdata/vs.xcuserdatad/xcschemes/: xcschememanagement.plist
